--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -2,11 +2,22 @@ server {
     listen 80;
     server_name localhost;
 
-    # Frontend — static files
+    # === Performance: Gzip Compression ===
+    gzip on;
+    gzip_types application/json text/plain text/css application/javascript;
+    gzip_min_length 256;
+
+    # Frontend — static files (with aggressive caching)
     location / {
         root /usr/share/nginx/frontend;
         index index.html;
         try_files $uri $uri/ /index.html;
+
+        # Cache static assets (JS/CSS/Fonts/Images)
+        location ~* \.(js|css|woff2?|ttf|png|jpg|jpeg|gif|ico|svg|webp|mp3|ogg)$ {
+            expires 7d;
+            add_header Cache-Control "public, immutable";
+        }
     }
 
     # Laravel API
@@ -20,5 +31,16 @@ server {
         # Pass the original URI
         fastcgi_param REQUEST_URI $request_uri;
         fastcgi_param QUERY_STRING $query_string;
+
+        # === Performance: Buffer & Timeout ===
+        fastcgi_buffering on;
+        fastcgi_buffer_size 16k;
+        fastcgi_buffers 16 16k;
+        fastcgi_read_timeout 30s;
+        fastcgi_connect_timeout 5s;
+        fastcgi_send_timeout 10s;
+
+        # === Performance: Keep-Alive to PHP-FPM ===
+        fastcgi_keep_conn on;
     }
 }
