--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,14 @@ services:
       DB_USERNAME: ${POSTGRES_USER}
       DB_PASSWORD: ${POSTGRES_PASSWORD}
       GG_API: ${GG_API}
+      MAIL_MAILER: ${MAIL_MAILER:-smtp}
+      MAIL_HOST: ${MAIL_HOST:-mailpit}
+      MAIL_PORT: ${MAIL_PORT:-1025}
+      MAIL_USERNAME: ${MAIL_USERNAME:-null}
+      MAIL_PASSWORD: ${MAIL_PASSWORD:-null}
+      MAIL_ENCRYPTION: ${MAIL_ENCRYPTION:-null}
+      MAIL_FROM_ADDRESS: ${MAIL_FROM_ADDRESS:-admin@my-cli.local}
+      MAIL_FROM_NAME: ${MAIL_FROM_NAME:-MyCLI_System}
     depends_on:
       - db
       - redis
@@ -62,6 +70,14 @@ services:
       - pgadmin-data:/var/lib/pgadmin
     depends_on:
       - db
+
+  mailpit:
+    image: axllent/mailpit
+    container_name: my-cli-mailpit
+    ports:
+      - "8025:8025"
+      - "1025:1025"
+    restart: unless-stopped
 
   tunnel:
     image: cloudflare/cloudflared:latest
