--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Database Configuration
-POSTGRES_USER=user
+POSTGRES_USER=yu
 POSTGRES_PASSWORD=password
 POSTGRES_DB=my-cli-db
 
@@ -7,7 +7,8 @@ POSTGRES_DB=my-cli-db
 PGADMIN_EMAIL=admin@example.com
 PGADMIN_PASSWORD=password
 
-# Application Host
+# Application Configuration
+APP_KEY=
 DB_HOST=db
 
 # Cloudflare Tunnel Token (Optional)
@@ -15,3 +16,15 @@ CLOUDFLARED_TOKEN=
 
 # Google Cloud API Key (Required for Translation/Speech)
 GG_API=
+
+# Google SMTP Key (App Password)
+GG_SMTP_KEY=
+
+# Mail Configuration (Example: Google SMTP)
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=465
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS=
