--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,8 @@ services:
       MAIL_ENCRYPTION: ${MAIL_ENCRYPTION:-null}
       MAIL_FROM_ADDRESS: ${MAIL_FROM_ADDRESS:-admin@my-cli.local}
       MAIL_FROM_NAME: ${MAIL_FROM_NAME:-MyCLI_System}
+      BROADCAST_CONNECTION: reverb
+      REVERB_HOST: reverb
     depends_on:
       - db
       - redis
@@ -77,6 +79,32 @@ services:
     ports:
       - "8025:8025"
       - "1025:1025"
+    restart: unless-stopped
+
+  reverb:
+    build: ./backend
+    container_name: my-cli-reverb
+    volumes:
+      - ./backend:/var/www/html
+    environment:
+      APP_ENV: local
+      APP_DEBUG: "true"
+      APP_KEY: ${APP_KEY:-}
+      DB_CONNECTION: pgsql
+      DB_HOST: db
+      DB_PORT: 5432
+      DB_DATABASE: ${POSTGRES_DB}
+      DB_USERNAME: ${POSTGRES_USER}
+      DB_PASSWORD: ${POSTGRES_PASSWORD}
+      REVERB_SERVER_HOST: 0.0.0.0
+      REVERB_SERVER_PORT: 8081
+      REVERB_HOST: reverb
+      BROADCAST_CONNECTION: reverb
+    command: php artisan reverb:start --host=0.0.0.0 --port=8081
+    depends_on:
+      - api
+      - db
+      - redis
     restart: unless-stopped
 
   tunnel:
