--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -21,4 +21,14 @@ server {
         fastcgi_param REQUEST_URI $request_uri;
         fastcgi_param QUERY_STRING $query_string;
     }
+
+    # Reverb Websockets
+    location /app {
+        proxy_pass http://reverb:8081;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
 }
