--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,38 @@ services:
       - redis
     restart: unless-stopped
 
+  queue:
+    build: ./backend
+    container_name: my-cli-queue
+    volumes:
+      - ./backend:/var/www/html
+    environment:
+      APP_ENV: local
+      APP_DEBUG: "true"
+      APP_KEY: ${APP_KEY:-}
+      DB_CONNECTION: pgsql
+      DB_HOST: db
+      DB_PORT: 5432
+      DB_DATABASE: ${POSTGRES_DB}
+      DB_USERNAME: ${POSTGRES_USER}
+      DB_PASSWORD: ${POSTGRES_PASSWORD}
+      GG_API: ${GG_API}
+      MAIL_MAILER: ${MAIL_MAILER:-smtp}
+      MAIL_HOST: ${MAIL_HOST:-mailpit}
+      MAIL_PORT: ${MAIL_PORT:-1025}
+      MAIL_USERNAME: ${MAIL_USERNAME:-null}
+      MAIL_PASSWORD: ${MAIL_PASSWORD:-null}
+      MAIL_ENCRYPTION: ${MAIL_ENCRYPTION:-null}
+      MAIL_FROM_ADDRESS: ${MAIL_FROM_ADDRESS:-admin@my-cli.local}
+      MAIL_FROM_NAME: ${MAIL_FROM_NAME:-MyCLI_System}
+      BROADCAST_CONNECTION: reverb
+      REVERB_HOST: reverb
+    command: php artisan queue:listen --tries=1 --timeout=0
+    depends_on:
+      - db
+      - redis
+    restart: unless-stopped
+
   db:
     image: postgres:16
     container_name: my-cli-postgres
